# StarPU --- Runtime system for heterogeneous multicore architectures.
#
# Copyright (C) 2012-2014,2016                           Inria
# Copyright (C) 2009-2018                                Université de Bordeaux
# Copyright (C) 2010-2018                                CNRS
#
# StarPU is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.2.7 (git revision xxx)
==============================================

StarPU 1.2.6 (git revision 23049adea01837479f309a75c002dacd16eb34ad)
==============================================

Small changes:
  * Fix crash for lws scheduler
  * Avoid making hwloc load PCI topology when CUDA is not enabled

StarPU 1.2.5 (git revision 22f32916916d158e3420033aa160854d1dd341bd)
==============================================

Small features:
  * Add a new value STARPU_TASK_COLOR to be used in
    starpu_task_insert() to pick up the color of a task in dag.dot
  * Add starpu_data_pointer_is_inside().

Changes:
  * Do not export -lcuda -lcudart -lOpenCL in *starpu*.pc.

StarPU 1.2.4 (git revision 255cf98175ef462749780f30bfed21452b74b594)
==============================================

Small features:
   * Catch of signals SIGINT and SIGSEGV to dump fxt trace files.
   * New configure option --disable-icc to disable the compilation of
     specific ICC examples
   * Add starpu_codelet_pack_arg_init, starpu_codelet_pack_arg,
     starpu_codelet_pack_arg_fini for more fine-grain packing capabilities.
   * Add starpu_task_insert_data_make_room,
     starpu_task_insert_data_process_arg,